# universal-translator

./: .gitignore  README.md  list_audio_devices.py  main.py  pyproject.toml  secrets.json.template  settings.json  test_audio.py
examples/: audio-file-translated.flac  identify.json  transcript.json  transcript.txt  translation.json
scrambler/: CHANGELOG  LICENSE  README.rst  pyproject.toml
scrambler/src/scrambler/: __main__.py  app.py
